UI: Fix Graph editor channel pin tooltip #97631

Closed
opened 2022-04-26 17:55:25 +02:00 by Nate Rupsis · 7 comments
Member

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 555 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.23

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-25 16:15, hash: 845e2ed3a2
Worked: Don't think it ever worked

Short description of error
Graph editor eye icon, and pin icon have same tooltip. Pin icon should read Display current channels regardless of object selection

Exact steps for others to reproduce the error
*Open the attached file, look at the channels in graph editor.

  • mouse over view (eye icon) then mouse over pin icon.
  • both descriptions are the same. Pin icon should read Display current channels regardless of object selection
    F-Curve-pin-tooltip.blend
**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 555 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.23 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-25 16:15, hash: `845e2ed3a2` Worked: Don't think it ever worked **Short description of error** Graph editor eye icon, and pin icon have same tooltip. Pin icon should read `Display current channels regardless of object selection` **Exact steps for others to reproduce the error** *Open the attached file, look at the channels in graph editor. * mouse over view (eye icon) then mouse over pin icon. * both descriptions are the same. Pin icon should read `Display current channels regardless of object selection` [F-Curve-pin-tooltip.blend](https://archive.blender.org/developer/F13030187/F-Curve-pin-tooltip.blend)
Author
Member

Added subscriber: @nrupsis

Added subscriber: @nrupsis
Nate Rupsis self-assigned this 2022-04-26 17:55:35 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, for such changes you can directly submit a patch and include why this change is required in patch description :)

Hi, for such changes you can directly submit a patch and include why this change is required in patch description :)
Author
Member

Ah okay, wasn't sure :)

Thanks!

Ah okay, wasn't sure :) Thanks!

This issue was referenced by 5ff931149b

This issue was referenced by 5ff931149b3967005054dbda2a81bf7f593ff03b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97631
No description provided.